--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,89 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-flow: row wrap;
+  justify-content: space-around;
+
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.flex-item {
+  padding: 5px;
+
+  margin-top: 10px;
+  line-height: 150px;
+
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+}
+.banner-text h1 {
+  font-size: 70px;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 5%;
+}
+
+#section1 {
+  height: 100vh;
+  width: 100%;
+}
+
+#section2 {
+  height: 100vh;
+  width: 100%;
+}
+.banner-img {
+  background-image: url('1.jpg');
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 0;
+  height: 100vh;
+  width: 100%;
+  padding: 0;
+  filter: blur(5px);
+}
+
+.banner-text {
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  width: 30%;
+  height: 30vh;
+  text-align: center;
+  border-top-left-radius: 70px;
+  border-bottom-right-radius: 70px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #ffffff;
+  font-weight: bold;
+  border: 10px inset;
+}
+.banner-text p {
+  padding: 0 8%;
+}
+
+.banner-text a {
+  display: inline-block;
+  padding: 10px;
+  border: 2px solid #fff;
+  text-decoration: none;
+  margin-top: 15px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link-to-up {
+  display: inline-block;
+  padding: 10px;
+  border: 2px solid #000;
+  text-decoration: none;
+  margin-top: 15px;
+  color: black;
+  text-align: center;
 }
